// Criando a interface Observador.java


public interface Observador {
    void atualizar(float temperatura);
}